[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/BezierPoint/BezierPoint.gd" type="Script" id=1]
[ext_resource path="res://Assets/circle_red.png" type="Texture" id=2]
[ext_resource path="res://Assets/circle_violet.png" type="Texture" id=3]

[node name="BezierPoint" type="Position2D"]
script = ExtResource( 1 )

[node name="PointButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -17.0
margin_right = 18.0
margin_bottom = 17.0
flat = true
icon_align = 1

[node name="Sprite" type="Sprite" parent="PointButton"]
position = Vector2( 18, 17 )
scale = Vector2( 0.53125, 0.53125 )
texture = ExtResource( 2 )

[node name="Handle" type="Position2D" parent="."]

[node name="HandleButton" type="Button" parent="Handle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
flat = true
icon_align = 1

[node name="Sprite" type="Sprite" parent="Handle/HandleButton"]
position = Vector2( 10, 10 )
scale = Vector2( 0.28125, 0.28125 )
texture = ExtResource( 3 )

[node name="HandleLine" type="Line2D" parent="."]
width = 3.0

[connection signal="button_down" from="PointButton" to="." method="_on_PointButton_button_down"]
[connection signal="button_down" from="Handle/HandleButton" to="." method="_on_HandleButton_button_down"]
